Fixed persistent overflow X issue in body.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@ body {
     background-image: url("../images/coding.jpg");
     background-size: cover; 
     background-attachment: fixed;
+    overflow-x: hidden; 
+}
+div.disabled {
+  overflow-x: hidden; 
+  overflow-y: scroll; 
 }
 
 .navbar {
@@ -25,6 +30,10 @@ div.overlay {
     font-family: 'Squada One', cursive;
     color: whitesmoke;
     font-size: 3.5rem;
+}
+
+.contactInfo {
+  margin: auto 2.5px;  
 }
 
 .homeBtns {
